--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ branches:
     - gh-pages
 language: php
 php:
-  - 7.1.3
+  - 7.1.3 # 必须构建最低要求版本
   - 7.1
   - 7.2
-  - hhvm
-  - nightly
+  - 7.3
+  - nightly # 每夜 PHP 构建，PHP 开发版本
 env:
   - DB=mysql
   - DB=postgres
@@ -42,20 +42,26 @@ jobs:
       cache:
         directories:
           - "node_modules"
+      services: null
+      env: null
       install: npm install
       script: npm run dev
+      after_script: null
     - stage: Deploy
       name: Deploy docs website
       branches:
         only: master
       language: node_js
       node_js: 8
+      services: null
+      env: null
       cache: yarn
       before_install: npm install --global yarn
       install:
         - yarn install
         - yarn add vuepress
       script: yarn docs:build
+      after_script: null
       deploy:
         provider: pages
         skip-cleanup: true
