chore: 修复构建脚本没有正确清除全局的 before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ jobs:
           - "node_modules"
       services: null
       env: null
+      before_install: null
       install: npm install
       script: npm run dev
       after_script: null
