--- a/packages/slimkit-plus-news/resource/assets/mix-manifest.json
+++ b/packages/slimkit-plus-news/resource/assets/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-  "/js/vendor.js": "/js/33bab093f0a0559968bc.js",
-  "/js/index.js": "/js/7b334df94bb380807655.js",
-  "/css/index.css": "/css/7b334df94bb380807655.css",
-  "/js/manifest.js": "/js/33de36bc66a2ff996ba3.js"
+  "/js/vendor.js": "/js/vendor.js",
+  "/js/index.js": "/js/index.js",
+  "/css/index.css": "/css/index.css",
+  "/js/manifest.js": "/js/manifest.js"
 }
