fix: 动态，资讯，评论置顶判断修改，去除无用依赖

--- a/packages/zhiyicx-plus-pc/composer.json
+++ b/packages/zhiyicx-plus-pc/composer.json
@@ -27,8 +27,7 @@
     },
     "require": {
         "overtrue/socialite": "^2.0",
-        "gregwar/captcha": "1.*",
-        "dingo/api": "2.0.0-alpha1"
+        "gregwar/captcha": "1.*"
     },
     "version": "2.0.3"
 }
