--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,6 @@ trim_trailing_whitespace = false
 [*.yml]
 indent_size = 2
 
-[*.{js,vue}]
+[*.{js,jsx,vue}]
 indent_style = space
 indent_size = 2
