--- a/packages/slimkit-plus-feed/.babelrc
+++ b/packages/slimkit-plus-feed/.babelrc
@@ -1,6 +1,23 @@
 {
-    "presets": ["env", "react", "stage-2"],
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+    ],
     "plugins": [
-        "transform-runtime"
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-json-strings",
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ],
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions"
     ]
 }
