refactor(feed): 重构动态管理列表

--- a/packages/slimkit-plus-feed/package.json
+++ b/packages/slimkit-plus-feed/package.json
@@ -36,7 +36,8 @@
     "plus-message-bundle": "^1.0.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-select": "^2.1.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --display-error-details --progress --hide-modules --colors --watch ",
