feat(SPA): 增加app下载引导功能

--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -13,3 +13,5 @@ VUE_APP_EASEMOB_APP_KEY=#
 VUE_APP_EASEMOB_API_URL=http://a1.easemob.com
 VUE_APP_EASEMOB_ISDEBUG=false
 VUE_APP_LBS_GAODE_KEY=
+VUE_APP_MOBLINK_ENABLE=false
+VUE_APP_MOBLINK_KEY=
