chore: editorconfig 调整（2空格缩进只针对后台代码生效）

--- a/packages/zhiyicx-plus-pc/.editorconfig
+++ b/packages/zhiyicx-plus-pc/.editorconfig
@@ -15,6 +15,6 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
 
-[*.{js,vue}]
+[resources/assets/admin/*.{js,vue}]
 indent_style = space
 indent_size = 2
