--- a/resources/spa/package.json
+++ b/resources/spa/package.json
@@ -28,7 +28,7 @@
     "photoswipe": "^4.1.2",
     "plus-message-bundle": "^1.0.2",
     "register-service-worker": "^1.5.2",
-    "strophe.js": "^1.2.16",
+    "strophe.js": "^1.3.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
@@ -36,16 +36,19 @@
     "weixin-js-sdk": "^1.3.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-plugin-pwa": "^3.0.3",
-    "@vue/cli-plugin-unit-jest": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-standard": "^3.0.3",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.0",
+    "@vue/cli-plugin-pwa": "^3.2.0",
+    "@vue/cli-plugin-unit-jest": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "^1.0.0-beta.26",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "conventional-changelog-cli": "^2.0.5",
+    "eslint": "^5.9.0",
+    "eslint-plugin-vue": "^5.0.0-0",
     "gh-pages": "^1.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
