--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ branches:
 language: php
 php:
   - 7.1.3 # 必须构建最低要求版本
-  - 7.1
-  - 7.2
-  # - 7.3
-  - nightly # 每夜 PHP 构建，PHP 开发版本
+  # - 7.1
+  # - 7.2
+  # # - 7.3
+  # - nightly # 每夜 PHP 构建，PHP 开发版本
 env:
-  - DB=mysql
+  # - DB=mysql
   - DB=postgres
 services:
   - mysql
