refactor(SPA): 整理 SPA 配置文件

--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -1,17 +1,33 @@
+# 应用二级路径 必须以 `/` 结尾！
 BASE_URL=/spa/
-GENERATE_CSS_MAP=true
 
-VUE_APP_ENABLE_SERVICE_WORKER=false
+# 生成 css source map
+GENERATE_CSS_MAP=false
+
+# PLUS 程序接口地址
 VUE_APP_API_HOST=http://127.0.0.1
+# PLUS 程序接口版本 (无需修改，目前支持的值只有 `v2`)
 VUE_APP_API_VERSION=v2
+
+# SEO 相关
 VUE_APP_NAME="Plus (ThinkSNS+)"
 VUE_APP_KEYWORDS="plus,web,spa,sns,think,thinksns,app,social,powerful,vue"
 VUE_APP_DESCRIPTION="📱The Plus(ThinkSNS+) client written with modern web technologies, built with Vue.js."
+
+# VUE 路由模式 (请参考 https://router.vuejs.org/zh/guide/essentials/history-mode.html)
 VUE_APP_ROUTER_MODE=hash
-VUE_APP_THEME=src/console/theme.js
-VUE_APP_EASEMOB_APP_KEY=#
+
+# PWA 支持
+VUE_APP_ENABLE_SERVICE_WORKER=false
+
+# 环信聊天组件
+VUE_APP_EASEMOB_APP_KEY=
 VUE_APP_EASEMOB_API_URL=http://a1.easemob.com
 VUE_APP_EASEMOB_ISDEBUG=false
+
+# 高德地图（用于定位）
 VUE_APP_LBS_GAODE_KEY=
+
+# MobLink 唤起APP
 VUE_APP_MOBLINK_ENABLE=false
 VUE_APP_MOBLINK_KEY=
