feat(SPA): 增加 QQ 在线咨询可选功能

--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -31,3 +31,8 @@ VUE_APP_LBS_GAODE_KEY=
 # MobLink 唤起APP
 VUE_APP_MOBLINK_ENABLE=false
 VUE_APP_MOBLINK_KEY=
+
+# QQ 在线咨询
+VUE_APP_QQ_CONSULT_ENALBE=false
+VUE_APP_QQ_CONSULT_UIN=
+VUE_APP_QQ_CONSULT_LABEL=在线咨询
