chore(SPA): i18n (多国语言)支持

--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -1,6 +1,11 @@
 # 应用二级路径 必须以 `/` 结尾！
 BASE_URL=/spa/
 
+# i18n 默认语言
+VUE_APP_I18N_LOCALE=zh-CN
+# i18n 某语言文件不存在时加载的语言
+VUE_APP_I18N_FALLBACK_LOCALE=en
+
 # 生成 css source map
 GENERATE_CSS_MAP=false
 
