--- a/resources/spa/package.json
+++ b/resources/spa/package.json
@@ -26,6 +26,7 @@
     "register-service-worker": "^1.5.2",
     "underscore": "^1.9.1",
     "vue": "^2.5.17",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "weixin-js-sdk": "^1.3.3"
@@ -43,11 +44,14 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.9.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "json-loader": "^0.5.7",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "postcss-px2rem": "^0.3.0",
     "strip-css-comments": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-cli-plugin-i18n": "^0.5.1",
+    "vue-template-compiler": "^2.5.17",
+    "yaml-loader": "^0.5.0"
   },
   "browserslist": [
     "> 1%",
