--- a/composer.json
+++ b/composer.json
@@ -112,6 +112,7 @@
         "lokielse/omnipay-wechatpay": "^3.0",
         "medz/cors": "^1.3",
         "medz/gb-t-2260": "^1.0",
+        "medz/laravel-jpush-notification-channel": "^1.0",
         "overtrue/easy-sms": "^1.0",
         "pingplusplus/pingpp-php": "^2.2",
         "predis/predis": "^1.1",
