chore(SPA): 恢复 yarn lock（因为装依赖太慢了）
(cherry picked from commit f04e7edbe33136577b0cbe7db475cd68dad65737)

--- a/resources/spa/.gitignore
+++ b/resources/spa/.gitignore
@@ -24,7 +24,7 @@ yarn-error.log*
 
 # package mamager lock files
 package-lock.json
-yarn.lock
+!yarn.lock
 
 # ignore vscode settings for eslint auto-fix
 !/.vscode
