refactor(Core): Updated framework to Laravel 5.8 version

--- a/packages/slimkit-plus-socialite/composer.json
+++ b/packages/slimkit-plus-socialite/composer.json
@@ -5,11 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "illuminate/console": "5.7.*",
-        "illuminate/contracts": "5.7.*",
-        "illuminate/database": "5.7.*",
-        "illuminate/support": "5.7.*"
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
