--- a/packages/slimkit-plus-checkin/composer.json
+++ b/packages/slimkit-plus-checkin/composer.json
@@ -4,11 +4,7 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=7.0",
-        "illuminate/console": "5.7.*",
-        "illuminate/contracts": "5.7.*",
-        "illuminate/database": "5.7.*",
-        "illuminate/support": "5.7.*"
+        "php": ">=7.0"
     },
     "autoload": {
         "psr-4": {
