--- a/composer.json
+++ b/composer.json
@@ -103,8 +103,8 @@
         "intervention/image": "^2.3",
         "jenssegers/agent": "^2.6",
         "jpush/jpush": "^3.5",
-        "laravel/framework": "5.7.*",
-        "laravel/telescope": "^1.0",
+        "laravel/framework": "5.8.*",
+        "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
         "league/html-to-markdown": "^4.6",
         "league/omnipay": "^3.0",
@@ -126,7 +126,7 @@
         "slimkit/plus-socialite": "2.3.0",
         "symfony/finder": "^4.0",
         "symfony/yaml": "^4.0",
-        "tymon/jwt-auth": "1.0.0-rc.3",
+        "tymon/jwt-auth": "1.0.0-rc.4.1",
         "zhiyicx/plus-pc": "2.3.0"
     },
     "require-dev": {
@@ -134,8 +134,24 @@
         "codacy/coverage": "^1.4",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5"
+    },
+    "config": {
+        "platform": {
+            "php": "7.1.3"
+        },
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.1-dev"
+        },
+        "laravel": {
+            "dont-discover": []
+        }
     },
     "autoload": {
         "files": [
@@ -154,14 +170,6 @@
             "Zhiyi\\Plus\\Tests\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.1-dev"
-        },
-        "laravel": {
-            "dont-discover": []
-        }
-    },
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -174,14 +182,6 @@
             "@php artisan key:generate --ansi",
             "@php artisan jwt:secret --force --ansi"
         ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true,
-        "platform": {
-            "php": "7.1.3"
-        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
