--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,13 @@
 {
-    "presets": [
-        ["env", {
-            "targets": {
-                "node": "6.10",
-                "browsers": [
-                    "last 2 versions",
-                    "not ie <= 8"
-                ]
-            }
-        }],
-        "stage-2"
-    ],
-    "plugins": [
-        ["component", [{
-            "libraryName": "element-ui",
-            "styleLibraryName": "theme-chalk"
-        }]]
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
     ]
+  ]
 }
