--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "cross-env": "^5.1.5",
         "laravel-mix": "^2.1",
         "opencollective": "^1.0.3",
+        "resolve-url-loader": "^3.1.0",
         "vue-template-compiler": "^2.5.16"
     },
     "dependencies": {
