--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
         "docs:build": "vuepress build docs"
     },
     "devDependencies": {
-        "@slimkit/plus-editor": "^0.0.3",
-        "babel-plugin-component": "^1.1.1",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-stage-2": "^6.24.1",
+        "@babel/core": "^7.5.4",
+        "@vue/babel-preset-app": "^3.9.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "conventional-changelog-cli": "^2.0.1",
         "cross-env": "^5.1.5",
-        "laravel-mix": "^2.1",
+        "laravel-mix": "^4.1.2",
         "opencollective": "^1.0.3",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.22.4",
+        "sass-loader": "7.*",
         "vue-template-compiler": "^2.5.16"
     },
     "dependencies": {
         "@slimkit/plus-editor": "^0.0.3",
-        "axios": "^0.18",
+        "axios": "^0.19.0",
         "bootstrap-sass": "^3.3.7",
         "chart.js": "^2.7.2",
         "echarts": "^4.1.0",
@@ -36,11 +37,11 @@
         "jquery": "^3.3.1",
         "js-md5": "^0.7.3",
         "lodash": "^4.17.10",
-        "markdown-it": "^8.4.1",
+        "markdown-it": "^9.0.0",
         "plus-message-bundle": "^1.0.2",
         "simkit-bootstrap-ui-kit": "^1.1.1",
         "vue": "^2.5.16",
-        "vue-echarts-v3": "^1.0.19",
+        "vue-echarts-v3": "^2.0.1",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
         "vuex-router-sync": "^5.0.0"
