--- a/resources/spa/package.json
+++ b/resources/spa/package.json
@@ -9,48 +9,48 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "c-swipe": "^2.1.0",
-    "cropperjs": "^1.4.1",
+    "axios": "^0.19.0",
+    "c-swipe": "^2.1.5",
+    "cropperjs": "^1.5.5",
     "crypto-js": "^3.1.9-1",
     "dexie": "^2.0.4",
-    "easemob-websdk": "1.4.15",
-    "github-markdown-css": "^2.10.0",
+    "easemob-websdk": "3.0.4",
+    "github-markdown-css": "^3.0.1",
     "headroom.js": "^0.9.4",
     "js-md5": "^0.7.3",
-    "lodash": "^4.17.11",
-    "markdown-it": "^8.4.2",
+    "lodash": "^4.17.15",
+    "markdown-it": "^9.1.0",
     "markdown-it-plus-image": "^1.0.1",
     "photoswipe": "^4.1.2",
     "plus-message-bundle": "^1.0.2",
     "register-service-worker": "^1.5.2",
     "underscore": "^1.9.1",
     "vue": "^2.5.21",
-    "vue-i18n": "^8.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "weixin-js-sdk": "^1.3.3",
+    "vue-i18n": "^8.14.0",
+    "vue-router": "^3.1.2",
+    "vuex": "^3.1.1",
+    "weixin-js-sdk": "^1.4.0-test",
     "xss": "^1.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-pwa": "^3.3.0",
-    "@vue/cli-plugin-unit-jest": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-pwa": "^3.10.0",
+    "@vue/cli-plugin-unit-jest": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.26",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.9.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "json-loader": "^0.5.7",
     "less": "^3.8.1",
-    "less-loader": "^4.1.0",
+    "less-loader": "^5.0.0",
     "postcss-px2rem": "^0.3.0",
-    "strip-css-comments": "^3.0.0",
-    "vue-cli-plugin-i18n": "^0.5.1",
+    "strip-css-comments": "^4.0.0",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.5.17",
     "yaml-loader": "^0.5.0"
   },
