--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
     "php": "^7.1.3",
     "ext-json": "*",
     "aliyuncs/oss-sdk-php": "^2.3",
+    "barryvdh/laravel-ide-helper": "^2.6",
     "doctrine/dbal": "^2.5",
     "erusev/parsedown": "^1.7",
     "ezyang/htmlpurifier": "^4.10",
