--- a/resources/spa/package.json
+++ b/resources/spa/package.json
@@ -45,9 +45,11 @@
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
     "eslint-plugin-vue": "^5.2.3",
+    "highlight.js": "^9.15.10",
     "json-loader": "^0.5.7",
     "less": "^3.8.1",
     "less-loader": "^5.0.0",
+    "markdown-it-container": "^2.0.0",
     "postcss-px2rem": "^0.3.0",
     "strip-css-comments": "^4.0.0",
     "vue-cli-plugin-i18n": "^0.6.0",
