fix: 修复因环信升级导致聊天不能用的bug

--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -27,7 +27,7 @@ VUE_APP_ENABLE_SERVICE_WORKER=false
 
 # 环信聊天组件
 VUE_APP_EASEMOB_APP_KEY=
-VUE_APP_EASEMOB_API_URL=http://a1.easemob.com
+VUE_APP_EASEMOB_API_URL=//a1.easemob.com
 VUE_APP_EASEMOB_ISDEBUG=false
 
 # 高德地图（用于定位）
