--- a/resources/spa/.env.example
+++ b/resources/spa/.env.example
@@ -41,3 +41,6 @@ VUE_APP_MOBLINK_KEY=
 VUE_APP_QQ_CONSULT_ENALBE=false
 VUE_APP_QQ_CONSULT_UIN=
 VUE_APP_QQ_CONSULT_LABEL=在线咨询
+
+# 打通商城的PlusId的ID
+VUE_APP_SHOP_PLUS_ID=
