fix: 修复资讯不展示内容的问题

--- a/packages/zhiyicx-plus-pc/composer.json
+++ b/packages/zhiyicx-plus-pc/composer.json
@@ -27,7 +27,8 @@
     },
     "require": {
         "overtrue/socialite": "^2.0",
-        "gregwar/captcha": "1.*"
+        "gregwar/captcha": "1.*",
+        "michelf/php-markdown": "^1.9"
     },
     "version": "2.3.2"
 }
