--- a/packages/slimkit-plus-checkin/composer.json
+++ b/packages/slimkit-plus-checkin/composer.json
@@ -4,11 +4,7 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=7.2.0",
-        "illuminate/console": "5.8.*",
-        "illuminate/contracts": "5.8.*",
-        "illuminate/database": "5.8.*",
-        "illuminate/support": "5.8.*"
+        "php": ">=7.2.0"
     },
     "autoload": {
         "psr-4": {
@@ -34,5 +30,5 @@
             ]
         }
     },
-    "version": "2.4.0"
+    "version": "2.4.1"
 }
