--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "docs:build": "vuepress build docs"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@babel/core": "^7.15.5",
+        "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@vue/babel-preset-app": "^3.9.2",
+        "babel-loader": "^8.2.2",
         "conventional-changelog-cli": "^2.0.23",
         "cross-env": "^7.0.3",
         "laravel-mix": "^4.1.2",
